
Changes with lua-resty-uuid 1.0                                  22 Jan 2016

    *) Feature: LuaRocks Support via MoonRocks.